--- a/taotao-common/pom.xml
+++ b/taotao-common/pom.xml
@@ -11,6 +11,6 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>taotao-common</artifactId>
-
+    <packaging>jar</packaging>
 
 </project>
