--- a/taotao-manager/pom.xml
+++ b/taotao-manager/pom.xml
@@ -18,6 +18,24 @@
         <module>taotao-manager-service</module>
         <module>taotao-manager-web</module>
     </modules>
-
+    <dependencies>
+        <dependency>
+            <groupId>com.quleou</groupId>
+            <artifactId>taotao-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <configuration>
+                    <port>8080</port>
+                    <path>/</path>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
