--- a/taotao-manager/taotao-manager-service/pom.xml
+++ b/taotao-manager/taotao-manager-service/pom.xml
@@ -10,6 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>taotao-manager-service</artifactId>
+    <packaging>jar</packaging>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>com.quleou</groupId>
+            <artifactId>taotao-manager-dao</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
