--- a/taotao-parent/pom.xml
+++ b/taotao-parent/pom.xml
@@ -80,6 +80,7 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+
         <!-- 日志处理 -->
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -120,6 +121,11 @@
             <version>${druid.version}</version>
         </dependency>
         <!-- Spring -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
