更新2017年12月26日

--- a/taotao-parent/pom.xml
+++ b/taotao-parent/pom.xml
@@ -187,6 +187,13 @@
             <artifactId>solr-solrj</artifactId>
             <version>${solrj.version}</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.github.tobato/fastdfs-client -->
+        <dependency>
+            <groupId>com.github.tobato</groupId>
+            <artifactId>fastdfs-client</artifactId>
+            <version>1.25.4-RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <build>
