--- a/taotao-manager/taotao-manager-web/pom.xml
+++ b/taotao-manager/taotao-manager-web/pom.xml
@@ -16,6 +16,10 @@
             <artifactId>taotao-manager-service</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId></groupId>
+            <artifactId></artifactId>
+        </dependency>
     </dependencies>
     <build>
         <finalName>taotao-manager-web</finalName>
